:bug: fixed the bug where the content overflows the container

--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -5,15 +5,18 @@
     width: 100%;
     height: 100%;
     background-color: #000;
+    
 }
 
 .modal{
-    height: 300px;
+    height: 700px;
     width: 400px;
     background-color: #fff;
     margin: 150px auto;
     color: black;
     padding: 20px;
+    overflow: scroll;
+   
 
 }
 
@@ -31,3 +34,6 @@
 .nameInput, .columnsInput{
     width: 100%;
 }
+
+
+
